--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -14,9 +14,14 @@
         <%- include('partials/nav') %>
     </header>
 
-    <main class="container my-4">
-        <%- include(view) %>
-    </main>
+  
+
+    <div class="content-wrapper">
+        <main class="container my-4">
+            <%- include(view) %>
+        </main>
+    </div>
+    
     <footer class="text-center mt-4">
         <p>&copy; 2024 BookedUp</p>
     </footer>
