--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -17,10 +17,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/books">Books</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/cart">Cart</a>
-                </li>
                 <% if (user) { %>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/customers/dashboard">My Dashboard</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/auth/logout">Logout</a>
                     </li>
@@ -29,6 +29,9 @@
                         <a class="nav-link" href="/auth/login">Login</a>
                     </li>
                 <% } %>
+                <li class="nav-item">
+                    <a class="nav-link" href="/cart">Cart</a>
+                </li>
             </ul>
         </div>
     </div>
