--- a/views/admin-add.ejs
+++ b/views/admin-add.ejs
@@ -1,3 +1,14 @@
+<!--
+   Name: Kennedy Page
+   Date: 12.07.24
+   CSC 372-01
+
+   This file defines the view for adding a new book in the admin section of the BookedUp project.
+   It provides a form for admin users to input details such as title, author, category, price, 
+   description, and an optional image for the book.
+
+-->
+
 <form action="/admin/books/add" method="POST" enctype="multipart/form-data">
     <div class="mb-3">
         <label for="title" class="form-label">Title</label>
