--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -1,4 +1,13 @@
-<%- include('partials/admin-nav') %> <!-- Include the navigation -->
+<!--
+   Name: Kennedy Page
+   Date: 12.07.24
+   CSC 372-01
+
+   This file defines the main view for the admin panel in the BookedUp project. 
+   It provides a comprehensive interface for managing books, including adding new books, 
+   viewing the book list, and performing actions like editing or deleting books.
+   
+-->
 
 <div class="container mt-4">
     <h2>Admin Panel</h2>
