--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,14 @@
+<!--
+   Name: Kennedy Page
+   Date: 12.07.24
+   CSC 372-01
+
+  This file defines the footer section for the BookedUp project. 
+  It provides a consistent footer across all pages, which may include links, 
+  copyright information, and additional resources.
+   
+-->
+
 <footer class="bg-dark text-white text-center py-3">
     <p>&copy; 2024 BookedUp. All rights reserved.</p>
 </footer>
