--- a/views/admin-customer-orders-history.ejs
+++ b/views/admin-customer-orders-history.ejs
@@ -1,3 +1,14 @@
+<!--
+   Name: Kennedy Page
+   Date: 12.07.24
+   CSC 372-01
+
+   This file defines the view for displaying the order history of customers in the admin section 
+   of the BookedUp project. It provides a list of all customer orders with details such as order ID, 
+   customer name, order date, total amount, and order status.
+
+-->
+
 <ul class="list-group">
     <% if (orders.length > 0) { %>
         <% orders.forEach(order => { %>
@@ -12,3 +23,9 @@
         <li class="list-group-item">No orders found for this customer.</li>
     <% } %>
 </ul>
+
+<div class="container mt-4 d-flex justify-content-center my-3">
+  <!-- Back to Dashboard Button -->
+  <div class="mb-3">
+    <a href="/admin" class="btn btn-secondary">Back to Dashboard</a>
+  </div>
