--- a/views/order-detail.ejs
+++ b/views/order-detail.ejs
@@ -1,3 +1,14 @@
+<!--
+   Name: Kennedy Page
+   Date: 12.07.24
+   CSC 372-01
+
+   This file defines the view for displaying detailed information about a specific order in the BookedUp project.
+   It includes details such as the order ID, customer information, items purchased, quantities, 
+   total cost, and the order status.
+ 
+-->
+
 <%- include('partials/admin-nav') %> <!-- Include the admin navigation -->
 
 <div class="container mt-4">
